--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,7 +16,10 @@ a{
  color: black;
 
 }
-
+.imgproducto{
+    width:300px;
+    height:300px;
+}
 header{
     display:flex;
     min-height: 70px;
@@ -79,12 +82,6 @@ color: aliceblue;
 
 }
 
-.imagen34{
-    width: 100px;
-    height: 100px;
-
-}
-
 .fondo2{
     background-image: url('../img/fvioleta.jpg');
     width: 100%;
@@ -97,7 +94,7 @@ color: aliceblue;
  
     
 h3{
-    color: white;
+    color: white!important;
 }
 h1{
     color: white;
