--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,8 +22,9 @@ a{
 }
 header{
     display:flex;
+    background-image: url(../img/fondohead.jpg);
     min-height: 70px;
-    background-color: rgb(123, 0, 238);
+    background-color: rgb(58, 0, 112);
     justify-content: space-between;
     align-items: center;
     padding: 15px;
@@ -36,8 +37,8 @@ header{
 }
 
 .logo img{
-    height: 50px;
-    margin: 10px;
+    height: 80px;
+    margin: 20px;
 }
 
 nav a{
@@ -92,7 +93,9 @@ color: aliceblue;
 
 }
  
-    
+    h2{
+        color: white;
+    }
 h3{
     color: white!important;
 }
@@ -104,4 +107,39 @@ p{
     color: white;
 }
 
+.nombre-tienda img{
+    background-image: url(../img/fondohead122.jpg);
+    height: 100px;
+    width: 400px;
+}
 
+.contenedor h1{
+    text-align: center;
+    align-items: center;
+}
+
+.fondo3 {
+
+    background-image: url('../img/fondo33.png');
+    width: 100%;
+    height: 100vh;
+    border-style: solid ;
+    border-color: black;
+    border-width: 10px;
+
+}
+
+
+.fa-brands{
+    color: aliceblue;
+}
+
+.contenedor3{
+    width: 1000px;
+    height: 700px;
+    
+    text-align: center;
+    background-image: url('../img/gf1.jpg');
+    color: aliceblue;
+
+}
