--- a/css/estilos.css
+++ b/css/estilos.css
@@ -147,3 +147,12 @@ p{
     height: 200px;
     width: 200px;
 }
+.fondo4{
+    background-image: url('../img/fondo33.png');
+    width: 100%;
+    height: 100vh;
+    border-style: solid ;
+    border-color: black;
+    border-width: 10px;
+
+}
