Carrito y editar perfil

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     border-style: solid ;
-    border-color: black;
+    border-color: rgb(0, 0, 0);
     border-width: 10px;
 }
 body{
@@ -13,7 +13,7 @@ body{
 }
 a{
  text-decoration: none;
- color: black;
+ color: rgb(0, 0, 0);
 
 }
 .imgproducto{
@@ -39,6 +39,7 @@ header{
 .logo img{
     height: 80px;
     margin: 20px;
+    background: transparent;
 }
 
 nav a{
@@ -53,6 +54,7 @@ nav a:hover{
 @media (max-width: 700px){
   header{
    flex-direction: column;
+
   }
 nav{
     padding: 10px 0px;
@@ -84,7 +86,7 @@ color: aliceblue;
 }
 
 .fondo2{
-    background-image: url('../img/fvioleta.jpg');
+    background-image: url('../img/fondo33.png');
     width: 100%;
     height: 100%;
     border-style: solid ;
@@ -95,12 +97,15 @@ color: aliceblue;
  
     h2{
         color: white;
+        
     }
 h3{
     color: white!important;
 }
 h1{
     color: white;
+    
+    
 }
 
 p{
@@ -155,4 +160,74 @@ p{
     border-color: black;
     border-width: 10px;
 
+}
+
+.fondo5{
+    background-image: url('../img/fondo33.png');
+    width: 100%;
+    height: 100vh;
+    border-style: solid ;
+    border-color: black;
+    border-width: 10px;
+
+}
+
+.fondo6{
+    background-image: url('../img/fondo33.png');
+    width: 100%;
+    height: 100vh;
+    border-style: solid ;
+    border-color: black;
+    border-width: 10px;
+
+}
+.nombre-tienda{
+
+opacity: 1;
+background: transparent;
+
+}
+.a{
+
+background-color: transparent;
+}
+
+.container{
+   color: white;
+}
+.Contenedor5 img{
+    
+    width: 110px;
+    height: 110px;
+    border-radius: 20px 20px 0px 0px;
+    display: flex;
+    justify-content: center;
+flex-wrap: wrap;
+gap: 50px;
+margin-bottom: 20px;
+}
+
+.header3{
+
+    
+    background-position: center;
+    height: 300px;
+    color: white;
+}
+
+.header3 h1{
+text-align: center;
+font-size: 35px;
+color: white;
+padding: 30px,0;
+
+}
+
+.Contenedor5{
+    border: 10px #4e0055;
+    border-style: solid;
+    border-radius: 100px ,50px;
+}
+span{
+    color: white;
 }
