--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,7 +174,7 @@ p{
 
 .fondo6{
     background-image: url('../img/fondo33.png');
-    width:100vh;
+    width:100%;
     height: 100vh;
     border-style: solid ;
     border-color: black;
@@ -231,3 +231,10 @@ padding: 30px,0;
 span{
     color: white;
 }
+.fondo7{
+    background-image: url('../img/fondo33.png');
+    width:100%;
+    height: 100vh;
+    border-style: solid ;
+    border-color: black;
+    border-width: 10px;}
